<resources>
    <string name="app_name">Sapelli Viewer</string>
    <string name="user_name"> </string>
    <string name="logout">Log out</string>
    <string name="url">GeoKey URL</string>
    <string name="scheme">https://</string>
    <string name="geokey_authentication">GeoKey Authentication</string>
    <string name="user_credentials">User Credentials</string>
    <string name="title_activity_maps">Map</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="geokey_not_found">GeoKey could not be found at this URL</string>
    <string name="invalid_username_pw">Invalid username or password</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="contributions">"Contributions: "</string>
    <string name="media">"Media files: "</string>
    <string name="active">ACTIVE</string>
    <string name="map_path">"Map path: "</string>
    <string name="pick_tpk">Select a map tile package</string>
    <string name="choose_map_path">Choose a map path</string>
    <string name="world_topo_service">http://services.arcgisonline.com/arcgis/rest/services/World_Topo_Map/MapServer</string>
    <string name="world_imagery_service">https://services.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer</string>
    <string name="content_desc_rotate_north">Align map to north direction</string>
    <string name="content_desc_zoom_out">Zoom out</string>
    <string name="content_desc_zoom_in">Zoom in</string>
    <string name="choose_directory">Choose directory with raster files</string>
    <string name="blank_map">blank.vtpk</string>
    <string name="ssl_exception">Connection closed by peer</string>
    <string name="project_settings">Project settings</string>
    <string name="show_fields">Layer options:</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="what_s_up">What\'s up? :)</string>
    <string name="north">North</string>
    <string name="east">East</string>
    <string name="south">South</string>
    <string name="west">West</string>
    <string name="interaction_logging">Interaction logging:</string>
    <string name="export_logs">Export logs</string>
    <string name="reload_project_structure">Reload Project structure:</string>
    <string name="db_exported">Database exported</string>
    <string name="show_all_fields_and_values">Show all fields and values</string>
    <string name="show_no_fields_but_all_values">Show no fields but all values</string>
    <string name="show_no_fields_but_display_values">Show no fields but display values</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pointButtonDescription">Draw new point</string>
    <string name="polylineButtonDescription">Draw new polyline</string>
    <string name="polygonButtonDescription">Draw new polygon</string>
    <string name="undoButtonDescription">Undo</string>
    <string name="redoButtonDescription">Redo</string>
    <string name="stopButtonDescription">Stop</string>
    <string name="view">View</string>
    <string name="draw">Draw</string>
    <string name="static_contribution_name">Contribution Name:</string>
    <string name="browse">Browse</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="enter_url">Enter URL</string>
    <string name="add_new_project">Add Project</string>
</resources>
