<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uk.ac.excites.ucl.sapelliviewer.activities.SettingsActivity">
    <item
        android:id="@+id/action_load"
        android:title="@string/add_new_project"
        android:icon="@drawable/ic_add_black_24dp"
        app:showAsAction="ifRoom">
        <menu />
    </item>

    <item
        android:id="@+id/action_user"
        android:icon="@drawable/ic_dots"
        android:title="@string/user_name"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/logout"
                android:title="@string/logout"
                app:showAsAction="always" />
        </menu>
    </item>
</menu>