<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/toolbar_background">

    <ImageButton
        android:contentDescription="@string/pointButtonDescription"
        android:background="@drawable/button_bar_background"
        android:id="@+id/pointButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:srcCompat="@drawable/ic_point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toStartOf="@+id/polylineButton"/>

    <ImageButton
        android:contentDescription="@string/polylineButtonDescription"
        android:background="@drawable/button_bar_background"
        android:id="@+id/polylineButton"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/pointButton"
        android:layout_width="wrap_content"
        app:srcCompat="@drawable/ic_line"
        app:layout_constraintStart_toEndOf="@+id/pointButton"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toStartOf="@+id/polygonButton"/>

    <ImageButton
        android:id="@+id/polygonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/pointButton"
        app:layout_constraintStart_toEndOf="@id/polylineButton"
        android:background="@drawable/button_bar_background"
        android:contentDescription="@string/polygonButtonDescription"
        android:src="@drawable/ic_polygon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
